--- a/luasrc/view/docker/container.htm
+++ b/luasrc/view/docker/container.htm
@@ -2,30 +2,30 @@
 <h2><a id="content" name="content"><%:Container Status%></a></h2>
 
 <fieldset class="cbi-section">
-
 	<table width="100%" cellspacing="10">
 		<tr><td width="33%"><%:ID%></td><td><%=pcdata(self.container_info.Id or "?")%></td></tr>
 		<tr><td width="33%"><%:Name%></td><td><%=pcdata(self.container_name or "?")%></td></tr>
-		<tr><td width="33%"><%:Status%></td><td><%=pcdata(self.container_info.State and self.container_info.State.Status or "?")%></td></tr>
+		<tr><td width="33%"><%:Status%></td><td id="Status"><%=pcdata(self.container_info.State and self.container_info.State.Status or "?")%></td></tr>
 		<tr><td width="33%"><%:Image%></td><td><%=pcdata(self.container_info.Image or "?")%></td></tr>
 		<tr><td width="33%"><%:Created%></td><td><%=pcdata(self.container_info.Created or "?")%></td></tr>
-    <tr><td width="33%"><%:Start time%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-    <tr><td width="33%"><%:Healthy%></td><td id="localtime">-</td></tr>
-    <tr><td width="33%"><%:CPU%></td><td id="loadavg">-</td></tr>
-    <tr><td width="33%"><%:Memory%></td><td id="loadavg">-</td></tr>
-    <tr><td width="33%"><%:Networks%></td><td id="loadavg">-</td></tr>
+		<% if self.container_info.State.Status == "running" then %>
+			<tr><td width="33%"><%:Start time%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
+			<tr><td width="33%"><%:Healthy%></td><td id="healthy"><%=pcdata(self.container_info.State and self.container_info.State.Health and self.container_info.State.Health.Status or "-")%></td></tr>
+			<tr><td width="33%"><%:CPU%></td><td id="loadavg"><%=self.calculate_cpu_percent(self.container_stats) or "-"%></td></tr>
+			<tr><td width="33%"><%:Memory%></td><td id="memory"><%=self.get_memory(self.container_stats) or "-"%></td></tr>
+			<tr><td width="33%"><%:Networks%></td><td id="networks"><%=self.get_rx_tx(self.container_stats) or "-"%></td></tr>
+		<% end %>
 	</table>
 </fieldset>
 
 <fieldset class="cbi-section">
 	<legend><%:Details%></legend>
-
 	<table width="100%" cellspacing="10">
-		<tr><td width="33%"><%:Ports%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-		<tr><td width="33%"><%:Links%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-		<tr><td width="33%"><%:Env%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-    <tr><td width="33%"><%:Command%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-    <tr><td width="33%"><%:Mount/Volume%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
-    <tr><td width="33%"><%:Restart Policy%></td><td><%=pcdata(self.container_info.State and self.container_info.State.StartedAt or "?")%></td></tr>
+		<tr><td width="33%"><%:Ports%></td><td><%=(self.get_ports(self.container_info) or "-")%></td></tr>
+		<tr><td width="33%"><%:Links%></td><td><%=(self.get_links(self.container_info) or "-")%></td></tr>
+		<tr><td width="33%"><%:Env%></td><td><%=(self.get_env(self.container_info) or "-")%></td></tr>
+    <tr><td width="33%"><%:Command%></td><td><%=pcdata(self.get_command(self.container_info) or "-")%></td></tr>
+    <tr><td width="33%"><%:Mount/Volume%></td><td><%=(self.get_mounts(self.container_info) or "-")%></td></tr>
+    <tr><td width="33%"><%:Restart Policy%></td><td><%=pcdata(self.container_info.HostConfig and self.container_info.HostConfig.RestartPolicy and self.container_info.HostConfig.RestartPolicy.Name or "?")%></td></tr>
 	</table>
 </fieldset>
