--- a/luasrc/view/docker/logs.htm
+++ b/luasrc/view/docker/logs.htm
@@ -13,8 +13,8 @@ $Id$
 
 -%>
 <%+header%>
-<h2><a id="content" name="content"><%:Docker Log%></a></h2>
+<h2><a id="content" name="content"><%=self.title%></a></h2>
 <div id="content_syslog">
-<textarea readonly="readonly" wrap="off" rows="<%=syslog:cmatch("\n")+2%>" id="syslog"><%=syslog:pcdata()%></textarea>
+<textarea readonly="readonly" wrap="off" rows="<%=self.syslog:cmatch("\n")+2%>" id="syslog"><%=self.syslog:pcdata()%></textarea>
 </div>
 <%+footer%>
