--- a/luasrc/view/docker/logs.htm
+++ b/luasrc/view/docker/logs.htm
@@ -12,9 +12,13 @@ You may obtain a copy of the License at
 $Id$
 
 -%>
+<% if self.title == translate("Docker Events") then %>
 <%+header%>
+<% end %>
 <h2><a id="content" name="content"><%=self.title%></a></h2>
 <div id="content_syslog">
 <textarea readonly="readonly" wrap="off" rows="<%=self.syslog:cmatch("\n")+2%>" id="syslog"><%=self.syslog:pcdata()%></textarea>
 </div>
+<% if self.title == translate("Docker Events") then %>
 <%+footer%>
+<% end %>
