--- a/luasrc/view/docker/resolv_container.htm
+++ b/luasrc/view/docker/resolv_container.htm
@@ -13,9 +13,9 @@
       return;
     }
     let re = /\/admin\/docker\/newcontainer\//
-	  let p = window.location.href
-	  let path = p.split(re)
-    window.location = path[0] + "/admin/docker/newcontainer/" + encodeURI(cmd_line)
+    let p = window.location.href
+    let path = p.split(re)
+    window.location.href = path[0] + "/admin/docker/newcontainer/" + encodeURI(cmd_line)
   }
 </script>
 <input type="button" class="cbi-button cbi-button-apply" value="Command line" onclick="resolv_container('<%=self.option%>')" />
