newcontainer: add custom dns server & translation: fix msgids

--- a/luasrc/view/docker/resolv_container.htm
+++ b/luasrc/view/docker/resolv_container.htm
@@ -3,7 +3,7 @@
   function resolv_container(op) {
     let s = document.getElementById(op + '-status');
     if (!s) return;
-    let cmd_line = prompt("Plese input <docker create/run> command line:", "");
+    let cmd_line = prompt("<%:Plese input <docker create/run> command line:%>", "");
     if (cmd_line == null || cmd_line == "") {
       s.innerHTML = "<font color='red'>Canceled</font>";
       return;
@@ -15,6 +15,6 @@
     window.location.href = "newcontainer/" + encodeURI(cmd_line)
   }
 </script>
-<input type="button" class="cbi-button cbi-button-apply" value="Command line" onclick="resolv_container('<%=self.option%>')" />
+<input type="button" class="cbi-button cbi-button-apply" value="<%:Command line%>" onclick="resolv_container('<%=self.option%>')" />
 <span id="<%=self.option%>-status"></span>
 <%+cbi/valuefooter%>
