--- a/luasrc/view/docker/resolv_container.htm
+++ b/luasrc/view/docker/resolv_container.htm
@@ -55,16 +55,15 @@
     document.documentElement.style.overflowY = 'scroll'
   }
 
-  function reslov_container(op) {
-    let s = document.getElementById(op + '-status');
+  function reslov_container() {
+    let s = document.getElementById('cmd-line-status')
     if (!s) return
     let cmd_line = document.getElementById("dialog_reslov_text").value;
     if (cmd_line == null || cmd_line == "") {
       return
     }
     if (!cmd_line.match(/^docker\s+(run|create)/)) {
-      s.innerHTML = "<font color='red'><%:Command line Error%></font>";
-      close_reslov_dialog()
+      s.innerHTML = "<font color='red'><%:Command line Error%></font>"
       return
     }
     let reg_space = /\s+/g
@@ -76,13 +75,20 @@
     window.location.href = "/cgi-bin/luci/admin/docker/newcontainer/" + encodeURI(cmd_line)
   }
 
-  function show_reslov_dialog(op) {
-    document.getElementById('dialog_reslov') || document.body.insertAdjacentHTML("beforeend", '<div id="dialog_reslov"><div class="dialog_box"><div class="dialog_line"></div><div class="dialog_line"><%:Plese input <docker create/run> command line:%></div><div class="dialog_line"><textarea class="cbi-input-textarea" id="dialog_reslov_text" style="width: 100%; height:100%;" rows="15"></textarea></div><div class="dialog_line" style="text-align: right;"><input type="button" class="cbi-button cbi-button-apply" type="submit" value="<%:Submit%>" onclick="reslov_container(\'' + op + '\')" /> <input type="button" class="cbi-button cbi-button-reset" type="reset" value="<%:Cancel%>" onclick="close_reslov_dialog()" /></div><div class="dialog_line"></div></div></div>')
+  function clear_text(){
+    let s = document.getElementById('cmd-line-status')
+    s.innerHTML = ""
+  }
+
+  function show_reslov_dialog() {
+    document.getElementById('dialog_reslov') || document.body.insertAdjacentHTML("beforeend", '<div id="dialog_reslov"><div class="dialog_box"><div class="dialog_line"></div><div class="dialog_line"><span><%:Plese input <docker create/run> command line:%></span><br><span id="cmd-line-status"></span></div><div class="dialog_line"><textarea class="cbi-input-textarea" id="dialog_reslov_text" style="width: 100%; height:100%;" rows="15" onkeyup="clear_text()"></textarea></div><div class="dialog_line" style="text-align: right;"><input type="button" class="cbi-button cbi-button-apply" type="submit" value="<%:Submit%>" onclick="reslov_container()" /> <input type="button" class="cbi-button cbi-button-reset" type="reset" value="<%:Cancel%>" onclick="close_reslov_dialog()" /></div><div class="dialog_line"></div></div></div>')
     document.body.classList.add('dialog-reslov-active')
+    let s = document.getElementById('cmd-line-status')
+    s.innerHTML = ""
     document.documentElement.style.overflowY = 'hidden'
   }
 </script>
 <%+cbi/valueheader%>
-<input type="button" class="cbi-button cbi-button-apply" value="<%:Command line%>" onclick="show_reslov_dialog('<%=self.option%>')" />
-<span id="<%=self.option%>-status"></span>
+<input type="button" class="cbi-button cbi-button-apply" value="<%:Command line%>" onclick="show_reslov_dialog()" />
+
 <%+cbi/valuefooter%>
