--- a/luasrc/view/dockerman/image_load.htm
+++ b/luasrc/view/dockerman/image_load.htm
@@ -1,6 +1,6 @@
 <div style="display: inline-block;">
   <input type="button"" class="cbi-button cbi-button-add" id="btnload" name="load" value="<%:Load%>" />
-  <input type="file" id="file_load" style="visibility:hidden" accept="application/x-tar" />
+  <input type="file" id="file_load" style="visibility:hidden; position: absolute;top: 0px; left: 0px;" accept="application/x-tar" />
 </div>
 <script type="text/javascript">
   let btnLoad = document.getElementById('btnload')
