--- a/luasrc/view/dockerman/logs.htm
+++ b/luasrc/view/dockerman/logs.htm
@@ -1,10 +1,7 @@
-<% if self.title == translate("Docker Events") then %>
 <%+header%>
-<% end %>
-<h2><a id="content" name="content"><%=self.title%></a></h2>
+<h2><a id="content" name="content"><%:Docker%></a></h2>
+<legend><%:Events%></legend>
 <div id="content_syslog">
 <textarea readonly="readonly" wrap="off" rows="<%=self.syslog:cmatch("\n")+2%>" id="syslog"><%=self.syslog:pcdata()%></textarea>
 </div>
-<% if self.title == translate("Docker Events") then %>
 <%+footer%>
-<% end %>
