luci-app-dockerman: add btn css class to button input
Signed-off-by: Florian Eckert <fe@dev.tdt.de>
(cherry picked from commit https://github.com/openwrt/luci/commit/1f8e181f0720d9131247665047e14e27c34e1cf4 )

fix conflicts:
1.delete file
	applications/luci-app-dockerman/luasrc/view/dockerman/container_file.htm
2.Add file:
	applications/luci-app-dockerman/luasrc/view/dockerman/container_file_manager.htm

--- a/applications/luci-app-dockerman/luasrc/view/dockerman/container_file_manager.htm
+++ b/applications/luci-app-dockerman/luasrc/view/dockerman/container_file_manager.htm
@@ -168,9 +168,9 @@
               + '<td class="cbi-value-field cbi-value-size">' + o.size + '</td>'
               + '<td class="cbi-value-field cbi-value-perm">' + o.perms + '</td>'
               + '<td class="cbi-section-table-cell">\
-                <button class="cbi-button cbi-button-rename cbi-button-edit">'+ "<%:Rename%>" + '</button>\
-                <button class="cbi-button cbi-button-download cbi-button-add">'+ "<%:Download%>" + '</button>\
-                <button class="cbi-button cbi-button-remove">'+ "<%:Remove%>" + '</button>\
+                <button class="btn cbi-button cbi-button-rename cbi-button-edit">'+ "<%:Rename%>" + '</button>\
+                <button class="btn cbi-button cbi-button-download cbi-button-add">'+ "<%:Download%>" + '</button>\
+                <button class="btn cbi-button cbi-button-remove">'+ "<%:Remove%>" + '</button>\
               </td>'
               + '</tr>';
           }
