--- a/applications/luci-app-dockerman/luasrc/view/dockerman/container_file_manager.htm
+++ b/applications/luci-app-dockerman/luasrc/view/dockerman/container_file_manager.htm
@@ -203,7 +203,7 @@
 		};
 
 		async function file2Tar(tarFile, fileToLoad) {
-			if (fileToLoad == null) return
+			if (! fileToLoad) return
 			function file2Byte(file) {
 				return new Promise((resolve, reject) => {
 					var fileReader = new FileReader();
@@ -223,11 +223,10 @@
 
 		function fileByte2Tar(tarFile, fileName, fileBytes) {
 			if (!tarFile) tarFile = TarFile.create(fileName)
-
 			var tarHeader = TarFileEntryHeader.default();
 			var tarFileEntryHeader = new TarFileEntryHeader
 				(
-					fileName,
+					ByteHelper.bytesToStringUTF8(fileName),
 					tarHeader.fileMode,
 					tarHeader.userIDOfOwner,
 					tarHeader.userIDOfGroup,
